# people_detection_vision

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  mainpage.dox  manifest.xml  nodelets.xml  package.xml  pplp_benchmarker_results.txt
cfg/: HOG.cfg  Viola.cfg
data/: LaserSurveillanceLogger2014-09-12_08-10-10-360.csv  LaserSurveillanceLogger_2014-09-12_08-13-06-116.csv  LaserSurveillanceLogger_2014-09-12_08-18-01-552.csv  LaserSurveillanceLogger_2014-09-12_08-20-41-037.csv  LaserSurveillanceLogger_2014-09-12_08-23-42-044.csv  LaserSurveillanceLogger_2014-09-12_12-53-58-676.csv
data/artoolkit/: 15.patt  25.patt  35.patt  45.patt  5.patt  55.patt  alberto.patt  alice.patt  ar_markers.bag  carrefour_card.patt  copy_patterns_to_ar_pose.bash  david.patt  irene.patt  jd.patt  links.txt  run_bag.sh
include/people_detection_vision/: artoolkit_utils.h  bg_substractor_pplp.h  connected_components_matcher.h  face_detector_pplp.h  fast_cluster_functions.h  hog_pplp.h  nite_user_mask_pplp.h  pplp_benchmarker.h  ppm_pplp.h  tabletop_pplp.h
launch/: all_pplp.launch  artoolkit2ppl.launch  benchmark_leg_detector.launch  benchmark_pplp.launch  benchmark_pplp_xp_arnaud.launch  bg_substractor_pplp.launch  face_detector2d_pplp.launch  face_detector_pplp.launch  hog_detector.launch  leg_detector.launch  nite_user_mask_pplp.launch  ppm_pplp.launch  tabletop_pplp.launch
launch/old/: cloud_filter.launch  cluster_detector.launch  fast_cluster_detector.launch  fast_cluster_detector_viewer.launch  fast_cluster_selector.launch  my_ar_pose_multi.launch  my_ar_pose_single.launch  robot_info_grabber.launch  speaker_detection.launch  track_moving_goal.launch
scripts/: rosdep.sh
src/: CMakeLists.txt  robot_info_grabber.cpp  robot_wanderer.cpp  robot_wanderer_with_moving_goal.cpp  twist_stamper.cpp
src/artoolkit/: CMakeLists.txt  artoolkit_img2patt.cpp  artoolkit_patt2img.cpp  artoolkit_pplp.cpp  artoolkit_utils.h
src/bg_substractor_pplp/: CMakeLists.txt  bg_substractor_pplp.cpp  bg_substractor_pplp.h  rlpd_grabber.cpp
src/cluster_detector/: CMakeLists.txt  cloud_filter.cpp  cluster_detector.cpp  floor_removal.cpp
src/depth_people_detector/: CMakeLists.txt  nite_user_mask_pplp.cpp  nite_user_mask_pplp.h  ppm_pplp.cpp  ppm_pplp.h  tabletop_pplp.cpp  tabletop_pplp.h
src/face_detector/: CMakeLists.txt  color_face_detector.cpp  color_face_detector.h  face_detector2d_pplp.cpp  face_detector_pplp.cpp  face_detector_pplp.h  face_eyes_detector.cpp  faces_benchmark.cpp  fake_face_detector_pplp.cpp  texture_sensor.cpp  texture_sensor.h
src/fast_cluster/: CMakeLists.txt  connected_components_matcher.h  fast_cluster_detector.cpp  fast_cluster_functions.h  fast_cluster_joy_control.cpp  fast_cluster_selector.cpp  fast_dialog.cpp  test_connected_components_matcher.cpp
src/hog_pplp/: CMakeLists.txt  hog_pplp.cpp  hog_pplp.h
src/leg_detector/: CMakeLists.txt  leg_pplp.cpp  scan_and_leg_publisher.cpp
src/ppl_benchmarking/: dgait2ppl.cpp
src/speaker_detector/: CMakeLists.txt  face_warper_speaker_detector.cpp  motion_based_speaker_detector.cpp  motion_based_speaker_detector.h  test_motion_based_speaker_detector.cpp
src/stereo/: CMakeLists.txt  stereo.cpp
src/stereo/bp-vision/: pnmfile.h  stereo.cpp  stereo_functions.h
src/third_parties/: CMakeLists.txt  test_dlib.cpp
test/: CMakeLists.txt  gtest_artoolkit_utils.cpp  gtest_face_detector_pplp.cpp  gtest_hog_pplp.cpp  gtest_nite_user_mask_pplp.cpp  gtest_ppm.cpp  gtest_tabletop_pplp.cpp
