<?xml version="1.0"?>
<package format="2">
  <name>people_detection_vision</name>
  <version>0.0.0</version>
  <description>
    people_detection_vision is a package for finding people around a
    robot.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://ros.org/wiki/people_detection_vision</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Ubuntu packages dependencies -->
  <depend>libv4l-dev</depend>
  <!-- ROS dependencies -->
  <depend>dynamic_reconfigure</depend>
  <!-- third party sources -->
  <depend>ar_pose</depend>
  <!-- AD -->
  <depend>kinect</depend>
  <depend>people_msgs</depend>
  <depend>vision_utils</depend>

  <export>
  </export>
</package>
