<?xml version="1.0"?>
<package format="2">
  <name>people_detection_vision</name>
  <version>0.0.0</version>
  <description>
    people_detection_vision is a package for finding people around a
    robot.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://ros.org/wiki/people_detection_vision</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Ubuntu packages dependencies:
       get the keys using "rosdep db"  -->
  <depend>libv4l-dev</depend>
  <!-- ROS dependencies -->
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>people_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
  <!-- third party sources:
        these should be in the dependencies.rosinstall of the package -->
  <depend>ar_pose</depend>
  <!-- AD -->

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
